--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <!-- answer choice 4 -->
                 <div>
-                    <button class="button is-link m-1" id="button-one" type="button">4. </button>
+                    <button class="button is-link m-1" id="button-four" type="button">4. </button>
                 </div>
             </div>
     
