--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                 <!-- answer choices dynamically appear here -->
                 <!-- answer choice 1 -->
                 <div>
-                    <button class="button is-link m-1" id="button-one" type="button">1. </button>
+                    <button class="button is-link m-1 answer-button" id="button-one" type="button">1. </button>
                 </div>
                 <!-- answer choice 2 -->
                 <div>
-                    <button class="button is-link m-1" id="button-two" type="button">2. </button>
+                    <button class="button is-link m-1 answer-button" id="button-two" type="button">2. </button>
                 </div>
                 <!-- answer choice 3 -->
                 <div>
-                    <button class="button is-link m-1" id="button-three" type="button">3. </button>
+                    <button class="button is-link m-1 answer-button" id="button-three" type="button">3. </button>
                 </div>
                 <!-- answer choice 4 -->
                 <div>
-                    <button class="button is-link m-1" id="button-four" type="button">4. </button>
+                    <button class="button is-link m-1 answer-button" id="button-four" type="button">4. </button>
                 </div>
             </div>
     
