check answer functionality and calculating scores

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <input class="input is-info is-focused" type="text" placeholder= "Input name">
                     </div>
                     <div class="control">
-                        <button class="button is-info ">Submit</button>
+                        <button class="button is-info" id="sumbit-score">Submit</button>
                     </div>
                 </div>
             </div>
