score/timer increases & decreases appropriately based on answer choice

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                 <!-- answer choices dynamically appear here -->
                 <!-- answer choice 1 -->
                 <div>
-                    <button onclick="answerClick('1')" class="button is-link m-1 answer-button" id="button-one" type="button">1. </button>
+                    <button onclick="checkAnswer('1')" class="button is-link m-1 answer-button" id="button-one" type="button">1. </button>
                 </div>
                 <!-- answer choice 2 -->
                 <div>
-                    <button onclick="answerClick('2')" class="button is-link m-1 answer-button" id="button-two" type="button">2. </button>
+                    <button onclick="checkAnswer('2')" class="button is-link m-1 answer-button" id="button-two" type="button">2. </button>
                 </div>
                 <!-- answer choice 3 -->
                 <div>
-                    <button onclick="answerClick('3')" class="button is-link m-1 answer-button" id="button-three" type="button">3. </button>
+                    <button onclick="checkAnswer('3')" class="button is-link m-1 answer-button" id="button-three" type="button">3. </button>
                 </div>
                 <!-- answer choice 4 -->
                 <div>
-                    <button onclick="answerClick('4')" class="button is-link m-1 answer-button" id="button-four" type="button">4. </button>
+                    <button onclick="checkAnswer('4')" class="button is-link m-1 answer-button" id="button-four" type="button">4. </button>
                 </div>
             </div>
     
