click event to return to home page

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                 High Scores: 
             </div>
             <!-- high score list -->
-            <div class="has-text-centered has-text-info has-background-info-light m-6 high-scores-list" id="high-scores-list">
+            <div class="has-text-centered has-text-info has-background-info-light m-6 scores-list" id="high-scores-list">
                 <!-- player names insert here -->
-                
+                hwllo
             </div>
             <!-- clear high scores & go back buttons -->
             <div class="is-grouped has-text-centered">
