userData object now showing up properlyin console

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <label class="label mr-3 mt-1 has-text-centered has-text-info">Add Highscore: </label>
                 <div class="field has-addons has-addons-centered">
                     <div class="control">
-                        <input id="user-input" class="input is-info is-focused" type="text" placeholder= "Input name">
+                        <input name="userInput" id="userInput" class="input is-info is-focused" type="text" placeholder= "Input name">
                     </div>
                     <div class="control">
                         <button class="button is-info submit-score" id="submit-score">Submit</button>
