rearranging storage and functions

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <!-- nav bar for high score & countdown timer -->
-    <nav class="navbar is-spaced">
+    <nav class="navbar-menu ">
         
             <!-- button to view high scores -->
-            <div class="navbar-start">
-                <button class ="button is-info" id="highscore-button" type="button"> View High Scores </button>
+            <div class="navbar-start m-3">
+                <button class ="navbar-item button is-info" id="highscore-button" type="button"> View High Scores </button>
             </div>
 
             <!-- Countdown timer -->
-            <div class="navbar-end">
+            <div class="navbar-item navbar-end m-3">
                 <ul class = "button is-info is-light" id="countdown-timer">Timer </ul>
             </div>
     </nav>
