--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- nav bar for high score & countdown timer -->
-    <nav class="navbar-menu ">
+    <nav class="navbar-menu is-justify-content-space-between">
         
             <!-- button to view high scores -->
             <div class="navbar-start m-3">
@@ -18,8 +18,8 @@
             </div>
 
             <!-- Countdown timer -->
-            <div class="navbar-item navbar-end m-3">
-                <ul class = "button is-info is-light" id="countdown-timer">Timer </ul>
+            <div class="navbar-end m-3">
+                <ul class = "navbar-item button is-info is-light" id="countdown-timer">Timer </ul>
             </div>
     </nav>
 
