improved appearance of high scores

--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
                 High Scores: 
             </div>
             <!-- high score list -->
-            <div class="has-text-centered has-text-info has-background-info-light m-6 scores-list" id="high-scores-list">
-                <!-- player names insert here -->
-                
+            <div class="columns is-centered"> 
+                <div class="column is-half has-text-centered has-text-info has-background-info-light m-6 scores-list" id="high-scores-list">
+                    <!-- player names insert here -->
+                </div>
             </div>
+
             <!-- clear high scores & go back buttons -->
             <div class="is-grouped has-text-centered">
                 <button class="button is-info" id="go-back">Go back</button>
