--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- nav bar for high score & countdown timer -->
-    <nav class="navbar-menu is-justify-content-space-between">
+    <nav class="navbar-brand is-justify-content-space-between is-flex-wrap-nowrap">
         
             <!-- button to view high scores -->
             <div class="navbar-start m-3">
